--- a/LeaveManagementSystem.Web/appsettings.json
+++ b/LeaveManagementSystem.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LeaveManagementSystem.Web-88fe7055-b6eb-4cc8-8f49-9061ebda25dd;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=LeaveManagementSystemDB;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=false"
   },
   "Logging": {
     "LogLevel": {
